--- a/java-tomcat-sample/pom.xml
+++ b/java-tomcat-sample/pom.xml
@@ -19,6 +19,14 @@
     <finalName>java-tomcat-maven-example</finalName>
     <plugins>
       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.3.0</version>
